Kubernetes/apache-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: online-shop-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache-pod
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
