Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-deployment
  namespace:  online-shop-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      name: online-shop-pod
      labels:
        app: online-shop
    spec:
      containers:
      - name: online-shop-container
        image: anilsahu350/online-shop:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        ports:
        - containerPort: 80
