Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-svc
  namespace: online-shop-prod
spec:
  selector:
    app: online-shop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
