Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-shop-ingress
  namespace: online-shop-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: online-shop
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/shop"
        backend:
          service:
            name: online-shop-svc
            port: 
              number: 3000
      -  pathType: Prefix
         path: "/apache"
         backend:
            service:
              name: apache-svc 
              port:   
                number: 80
